have some more stuff working, but not everything. fixed dark mode for everything (mainly just the charts and also added secondary colors). now need to fix the search and selection of plants for plant module creation. filters on the plants database work now and there are still some kinks to work out, but it is at a much better point.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,7 +6,8 @@
   --app-btn-secondary: #016630;
   --app-btn-secondary-rotate: #008236; 
   --app-bg-alt: #f0f0f0;     /* light alternative background */
-  --app-text: #000000;     /* light text */
+  --app-text-primary: #000000;     /* light text */
+  --app-text-secondary: #4a5568; /* light secondary text */
   --app-primary: #3461d3;  /* primary color */
   --app-secondary: #ffffff;/* secondary color */
 }
@@ -15,7 +16,8 @@
 html.dark {
   --app-bg: #1a202c;       /* dark background */
   --app-bg-alt: #2d3748;   /* dark alternative background */
-  --app-text: #ffffff;     /* dark text */
+  --app-text-primary: #ffffff;     /* dark text */
+  --app-text-secondary: #e2e8f0; /* dark secondary text */
   --app-primary: #34d399;  /* you can adjust as needed */
   --app-secondary: #ffffff;
 }
@@ -27,6 +29,7 @@ html.dark {
 
 .btn-primary {
   background-color: var(--app-btn-primary) !important;
+  color: #ffffff !important;
   transition: background-color 0.3s ease;
 }
 
@@ -57,7 +60,19 @@ html.dark {
   background-color: var(--app-bg-alt) !important;
 }
   
-.theme-text {
-  color: var(--app-text) !important;
+.theme-text-primary {
+  color: var(--app-text-primary) !important;
+}
+
+.theme-text-secondary {
+  color: var(--app-text-secondary) !important;
+}
+
+.text-box {
+  background-color: var(--app-bg-alt) !important;
+  color: var(--app-text-primary) !important;
+  border: 1px solid var(--app-bg-alt) !important;
+  transition: background-color 0.3s ease;
+  caret-color: var(--app-text-primary) !important;
 }
   
